--- a/.github/workflows/main_aps-agent0-02.yml
+++ b/.github/workflows/main_aps-agent0-02.yml
@@ -24,7 +24,7 @@ jobs:
           node-version: '20.x'
 
       - name: npm install, build, and test
-        env: #要修正
+        env:
           NEXT_PUBLIC_API_ENDPOINT: ${{ secrets.NEXT_PUBLIC_API_ENDPOINT }}
           API_ENDPOINT: ${{ secrets.API_ENDPOINT }}
         run: |
