--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-force-graph": "^1.48.0",
+    "react-force-graph-2d": "^1.28.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
