--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-primitive": "^2.1.3",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "force-graph": "^1.50.1",
+    "jerrypick": "^1.1.2",
     "next": "15.3.2",
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
