--- a/.github/workflows/main_aps-agent0-02.yml
+++ b/.github/workflows/main_aps-agent0-02.yml
@@ -25,8 +25,8 @@ jobs:
 
       - name: npm install, build, and test
         env:
-          NEXT_PUBLIC_API_ENDPOINT: ${{ secrets.NEXT_PUBLIC_API_ENDPOINT }}
-          API_ENDPOINT: ${{ secrets.API_ENDPOINT }}
+          NEXT_PUBLIC_API_BASE_URL: ${{ secrets.NEXT_PUBLIC_API_BASE_URL }}
+          API_BASE_URL: ${{ secrets.API_BASE_URL }}
         run: |
           npm install
           npm run build --if-present
