コメントページのUI改善: レスポンシブ対応、評価基準表示、スティッキーポジション、ヘッダーデザイン更新

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-primitive": "^2.1.3",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "force-graph": "^1.50.1",
@@ -23,7 +24,8 @@
     "react-dom": "^19.0.0",
     "react-force-graph": "^1.48.0",
     "react-force-graph-2d": "^1.28.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -34,6 +36,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.7",
     "typescript": "^5"
   }
 }
